--- a/Apq/Apq.DB/Apq.DB.csproj
+++ b/Apq/Apq.DB/Apq.DB.csproj
@@ -203,26 +203,24 @@
   </Target>
   -->
   <PropertyGroup>
-    <PreBuildEvent>if "%25Reference%25" == "" goto End
-if "" == "" goto EndConfig
-xcopy "%25Reference%25\$(ConfigurationName)\Config\Apq.dll.config" "$(ProjectDir)" /c /q /g /h /r /k /y
-xcopy "%25Reference%25\$(ConfigurationName)\Config\Apq.dll.apq" "$(ProjectDir)" /c /q /g /h /r /k /y
-xcopy "%25Reference%25\$(ConfigurationName)\Config\Apq.dll.log4net" "$(ProjectDir)" /c /q /g /h /r /k /y
+    <PreBuildEvent>if "" == "" goto EndConfig
+xcopy "$(ProjectDir)..\..\Reference\$(ConfigurationName)\Config\Apq.dll.config" "$(ProjectDir)" /c /q /g /h /r /k /y
+xcopy "$(ProjectDir)..\..\Reference\$(ConfigurationName)\Config\Apq.dll.apq" "$(ProjectDir)" /c /q /g /h /r /k /y
+xcopy "$(ProjectDir)..\..\Reference\$(ConfigurationName)\Config\Apq.dll.log4net" "$(ProjectDir)" /c /q /g /h /r /k /y
 :EndConfig
 
-if "%25Reference%25" == "" goto End
-xcopy "%25Reference%25\$(ConfigurationName)\Apq.dll" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
-xcopy "%25Reference%25\$(ConfigurationName)\Apq.xml" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
-xcopy "%25Reference%25\$(ConfigurationName)\Apq.pdb" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
+if "$(ProjectDir)..\..\Reference" == "" goto End
+xcopy "$(ProjectDir)..\..\Reference\$(ConfigurationName)\Apq.dll" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
+xcopy "$(ProjectDir)..\..\Reference\$(ConfigurationName)\Apq.xml" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
+xcopy "$(ProjectDir)..\..\Reference\$(ConfigurationName)\Apq.pdb" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
 :End</PreBuildEvent>
-    <PostBuildEvent>if "%25Reference%25" == "" goto End
-xcopy "%25Reference%25\Res\$(ProjectName)" "$(TargetDir)Res\" /c /q /g /h /r /k /y /e
+    <PostBuildEvent>xcopy "$(ProjectDir)..\..\Reference\Res\$(ProjectName)" "$(TargetDir)Res\" /c /q /g /h /r /k /y /e
 
-xcopy "$(TargetPath)" "%25Reference%25\$(ConfigurationName)\" /c /q /g /h /r /k /y
-xcopy "$(TargetDir)$(TargetName).xml" "%25Reference%25\$(ConfigurationName)\" /c /q /g /h /r /k /y
-xcopy "$(TargetDir)$(TargetName).pdb" "%25Reference%25\$(ConfigurationName)\" /c /q /g /h /r /k /y
-xcopy "$(TargetPath).config" "%25Reference%25\$(ConfigurationName)\Config\" /c /q /g /h /r /k /y
-xcopy "$(ProjectDir)$(TargetFileName).apq" "%25Reference%25\$(ConfigurationName)\Config\" /c /q /g /h /r /k /y
+xcopy "$(TargetPath)" "$(ProjectDir)..\..\Reference\$(ConfigurationName)\" /c /q /g /h /r /k /y
+xcopy "$(TargetDir)$(TargetName).xml" "$(ProjectDir)..\..\Reference\$(ConfigurationName)\" /c /q /g /h /r /k /y
+xcopy "$(TargetDir)$(TargetName).pdb" "$(ProjectDir)..\..\Reference\$(ConfigurationName)\" /c /q /g /h /r /k /y
+xcopy "$(TargetPath).config" "$(ProjectDir)..\..\Reference\$(ConfigurationName)\Config\" /c /q /g /h /r /k /y
+xcopy "$(ProjectDir)$(TargetFileName).apq" "$(ProjectDir)..\..\Reference\$(ConfigurationName)\Config\" /c /q /g /h /r /k /y
 :End</PostBuildEvent>
   </PropertyGroup>
 </Project>
